# LLRS

./: CMakeLists.txt  LICENSE  README.md  README_MMNL.txt  README_MNL.txt
AssortOpt/AssortOpt/: Source.cpp  Source_MMNL.cpp
cmake/: FindCPLEX.cmake
